# Minishell

./: CMakeLists.txt  LICENSE  Makefile  Makefile_Upgrade  README.md  minishell  pull_request_template.md
include/: execution.h  header.txt  minishell.h  parser.h  token.h
libft/: Makefile  README.md  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  (+6 more)
libft/inc/: libft.h
libft/incl/: ft_printf.h  libft.h
libft/src/: ft_atoi.c  ft_atoi2.c  ft_calloc.c  ft_countchar.c  ft_dup_matrix.c  ft_extend_matrix.c  ft_free_matrix.c  ft_isdigit.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back.c  ft_lstclear.c  ft_lstlast.c  ft_lstnew.c  ft_lstsize.c  ft_lsttomatrix.c  ft_matrix_del_elem.c  ft_matrix_replace_in.c  ft_matrixlen.c  ft_matrixtolst.c  ft_memset.c  ft_nbrlen.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putmatrix_fd.c  ft_putstr_fd.c  ft_split.c  ft_strchars_i.c  ft_strchr.c  ft_strchr_i.c  ft_strdup.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strncmp.c  ft_strnstr.c  ft_strtrim.c  ft_substr.c
src/: main.c
src/built_in/: built_in.c  built_in_exe.c  error.c  exit.c  export.c
src/env/: dollar.c  env.c  prompt.c  read_line.c  signal.c
src/execution/: access.c  bin_exe.c  execution.c  get.c  get2.c  is_redirection.c  status.c  variable.c
src/executor/: executor.c
src/is/: is_redirection.c  is_token.c
src/parser/: basic_char_checks.c  cmd_path_check.c  compound_char_checks.c  create_tokens.c  heredoc.c  (+14 more)
(+85 files in other folders)
